# OSDEV

./: LICENSE  README.md
test_os/: Cargo.toml  x86_64-test_os.json
test_os/.cargo/: config.toml
test_os/src/: main.rs  x86_64-test_os.json
