[package]
name = "test_os"
version = "0.1.0"
authors = ["Ethan Hammond <ethan.hammond.17@gmail.com>"]
edition = "2024"

[dependencies]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "test_os"
test = false
bench = false